----------------------------------------------------------------------
Thu Aug  9 23:02:59 2001                        Michael Jennings (mej)

Haha!  "avbuild" works again! :)
----------------------------------------------------------------------
Mon Aug 13 17:02:57 2001                        Michael Jennings (mej)

Packages can now have their own product files which are picked up by
the build.
----------------------------------------------------------------------
Mon Aug 13 17:25:35 2001                        Michael Jennings (mej)

Finalized the 0.8 version by making sure pkgtool groks "avbuild."
----------------------------------------------------------------------
Tue Aug 14 12:35:10 2001                        Michael Jennings (mej)

Getting pkgtool into full working order.  Next is srctool....
----------------------------------------------------------------------
Tue Aug 14 17:54:45 2001                        Michael Jennings (mej)

Just checking in today's stuff.  This is not necessarily functional.
----------------------------------------------------------------------
Mon Aug 20 10:36:18 2001                        Michael Jennings (mej)

Completely reworked the package variable mechanism.  No more need to
pass every silly parameter under the sun.
----------------------------------------------------------------------
Mon Aug 20 19:47:54 2001                        Michael Jennings (mej)

Fixed patch generation and added the new module I forgot last time.
----------------------------------------------------------------------
Mon Aug 20 15:24:33 2001                        Michael Jennings (mej)

Fixes to buildtool to sync up with the new pkgvar stuff.  It's now
building....
----------------------------------------------------------------------
Tue Aug 21 15:50:55 2001                        Michael Jennings (mej)

Down to 3 failures on the build now.  Yeehaw. :)
----------------------------------------------------------------------