@@ -1391,3 +1391,7 @@ Tue Aug 21 15:50:55 2001                        Michael Jennings (mej)
 
 Down to 3 failures on the build now.  Yeehaw. :)
 ----------------------------------------------------------------------
+Thu Aug 23 14:38:38 2001                        Michael Jennings (mej)
+
+The 0.12 release.  Looking good. :)
+----------------------------------------------------------------------
